# Glitch-Tag

./: Directory.Build.props  MicrosoftGame.config  README.md
.github/workflows/: build.yml
App/: GlitchGame.cs  GlitchHUD.hlsl  GlitchRenderer.cs  InputManager.cs  Program.cs
Assets/Legal/: Protocols.txt
Include/: DirectXDefinitions.cs  GlitchConstants.cs  XboxGDKBridge.cs
Logic/: Cargo.toml  lib.rs  network.rs
RustProject/src/: lib.rs
